--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,14 +1,18 @@
-Release 0.2 - 19 Mar 2013
--------------------------
+Release v1.0 - 15 Apr 2013
+--------------------------
+* RELEASE VERSION!
+* Added Help button help info
+* Switchname GUI field size adjustment
+
+
+Release v0.2 - 19 Mar 2013
+--------------------------
 * Fix Cisco switch model handling bug
 * Remove logo in bottom left had side of GUI
 * Minor code clean ups
 
 
-Release 0.1 - 18 Mar 2013
-
--------------------------
-
-* Initial Release!
-
+Release v0.1 - 18 Mar 2013
+--------------------------
+* Initial Release
 * Based on WinCDP - https://github.com/chall32/WinCDP
